--- a/Virtual_piano/Virtual_piano2.css
+++ b/Virtual_piano/Virtual_piano2.css
@@ -32,6 +32,7 @@ div
     padding: 4% 2%;
     font-size: 22pt;
     border: solid grey;
+    
 }
 
 .black-keys kbd
@@ -41,6 +42,8 @@ div
     display: inline-block;
     padding: 2% 1%;
     font-size: 22pt;
+    position: absolute;
+    top: 114px;
 }
 
 #W
